--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,6 +39,11 @@ header .box {
   border-bottom: 1px solid #fff;
 }
 
+footer {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+
 /* ----------------------- TYPE ----------------------- */
 h1 {
   font-size: 30px;
