--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,6 +28,12 @@ header .box {
   grid-template-columns: 2fr 1fr;
 }
 
+#about {
+  display: none;
+  border-top: 1px solid #fff;
+  background: inherit;
+}
+
 .videos {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -109,10 +115,10 @@ hr {
 /* ----------------------- BOIDS ----------------------- */
 .background {
   margin-top: -15;
-  z-index: 1000;
+  z-index: +1;
   position: relative;
   overflow: hidden;
-  height: calc(100vh - 110px);
+  height: calc(100vh - 120px);
   max-height: 100vw;
 }
 
@@ -217,6 +223,10 @@ img.hover-shadow {
   }
 
   .info {
+    grid-template-columns: 1fr;
+  }
+
+  #about {
     grid-template-columns: 1fr;
   }
 
