--- a/stylesheet01.css
+++ b/stylesheet01.css
@@ -5,6 +5,7 @@
 body {
   margin: 0;
   background-color: #222;
+  animation: fade 60s infinite alternate;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 1px;
   color: #fff;
@@ -204,11 +205,11 @@ img.hover-shadow {
 /* ----------------------- BACKGROUND COLOR ----------------------- */
 @keyframes fade {
   0% {
-    background-color: : #111;
+    background-color: : #222;
   }
 
   100% {
-    background-color: #2E555C;
+    background-color: #111;
   }
 }
 
