--- a/stylesheet02.css
+++ b/stylesheet02.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  background-color: #ffff00;
+  background-color: #FFFF66;
   animation: fade 60s infinite alternate;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 1px;
@@ -205,11 +205,11 @@ img.hover-shadow {
 /* ----------------------- BACKGROUND COLOR ----------------------- */
 @keyframes fade {
   0% {
-    background-color: : #ffff00;
+    background-color: : #FFFF99;
   }
 
   100% {
-    background-color: #ffff00;
+    background-color: #FFFF99;
   }
 }
 
